# next

./: README.md
api/: Dockerfile  pyproject.toml
api/api/: main.py
api/api/domain/: models.py
api/api/repository/: user.py
api/tests/unit/repository/: test_user.py
front/: app.vue  nuxt.config.ts  package-lock.json  package.json
front/composables/: useTG.ts
front/pages/: index.vue
front/pages/questions/: [aid].vue
