[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Rychanya <rychanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
